--- a/README.mustache
+++ b/README.mustache
@@ -1,9 +1,9 @@
-<img src="assets/rocket.svg" width="50px" align="right" />
+<img src="assets/{{emoji}}.svg" width="50px" align="right" />
 
 **Minhyeok\
 Park.**
 
-19yo Korean cloud architect & backend programmer.\
+{{age}}yo Korean cloud architect & backend programmer.\
 ✉️ mailto:opensource@pmh.codes
 /
 🔗 https://pmh.codes
@@ -26,16 +26,9 @@ Park.**
     "blabla..."
   ],
   "preferLanguages": [
-    { "name": "JavaScript", "percent": 37.4 },
-    { "name": "TypeScript", "percent": 17.6 },
-    { "name": "HTML", "percent": 14.9 },
-    { "name": "Go", "percent": 6.9 },
-    { "name": "CSS", "percent": 3.7 },
-    { "name": "Java", "percent": 3.2 },
-    { "name": "Python", "percent": 2.6 },
-    { "name": "Shell", "percent": 2.1 },
-    { "name": "Dockerfile", "percent": 1.6 },
-    { "name": "C", "percent": 1.6 }
+    {{#favlang}}
+    { "name": "{{name}}", "percent": {{percent}} }{{#colon}},{{/colon}}
+    {{/favlang}}
   ],
   "funFacts": {
     "tabIs": "2 spaces (change my mind)",
