feat: add friend renderer

--- a/README.mustache
+++ b/README.mustache
@@ -37,6 +37,7 @@ Park.**
   }
 }
 ```
+![Special thanks to my friends](./friends.png)
 
 ---
 Q. how did you make this automatic-generated README.md?\
